# GLSaver

./: CMakeLists.txt  README  README.md
GLSaver/: GLStars.cbp  GLStars.depend  GLStars.layout  GLStars.scr  README  animation.c  animation.cpp  animation.h  logger.c  logger.cpp  logger.h  main.c  main.cpp  noise.h  resource.rc  texture.c  texture.cpp  texture.h  trigger.c  trigger.cpp  trigger.h
GLSaver/Textures/: earth.raw  jupiter.raw  mars.raw  nebula-dark-old.raw  nebula-dark.raw  nebula-light-old.raw  nebula-light.raw  nebula.raw  neptune.raw  ring-blue.raw  ring-green.raw  ring-grey.raw  ring-red.raw  ring.raw  saturn.raw  star-4point.raw  star-blue.h  star-blue.raw  star-green.h  star-green.raw  star-round.raw  star-yellow.h  star-yellow.raw  sun.raw  texture data.txt
